# filename-templates

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
filename_templates/: __init__.py  filenames.py
filenames/: __init__.py  filenames.py
